# windows-env-lab

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  test.txt
.github/workflows/: metrics.yml
scripts/: dev.ps1  get-metrics.ps1
src/: main.py
