[project]
name = "windows-env-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita6587",email = "9537160922@mail.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
[tool.ruff]
line-length = 88

